--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Gerador de senhas seguras</title>
 </head>
 <body>
-    <h1>Gerador de senhas seguras</h1>
-    <button>Gerar senha</button>
-    <h2>...</h2>
-    <script src="/src/main.js" type="module"></script>
+    <main>
+        <h1>Gerador de senhas seguras</h1>
+        <button>Gerar senha</button>
+        <h2>...</h2>
+        <script src="/src/main.js" type="module"></script>
+    </main>
 </body>
 </html>
