--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <main>
         <h1>Gerador de senhas seguras</h1>
         <button>Gerar senha</button>
+        <!-- Esse H2 vai ser atualizado toda vez que clicar no botão de gerar senha -->
         <h2>...</h2>
         <script src="/src/main.js" type="module"></script>
     </main>
