--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-        <h1>Gerador de senhas seguras</h1>
+        <h1>🔐 Gerador de senhas seguras</h1>
         <button>Gerar senha</button>
         <!-- Esse H2 vai ser atualizado toda vez que clicar no botão de gerar senha -->
         <h2>...</h2>
